--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cabinet d'Avocats</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
+    <style>
+        @media (max-width: 768px) {
+            .mobile-menu {
+                display: none;
+            }
+        }
+        .mobile-menu.active {
+            display: block;
+        }
+    </style>
 </head>
 <body class="bg-gray-100 text-gray-900">
 
@@ -12,11 +22,23 @@
     <nav class="bg-white shadow">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
             <a href="#" class="text-xl font-bold text-blue-600">Cabinet d'Avocats</a>
-            <div>
-                <a href="#services" class="text-gray-700 mx-4">Services</a>
-                <a href="#about" class="text-gray-700 mx-4">À propos</a>
-                <a href="#contact" class="text-gray-700 mx-4">Contact</a>
+            <div class="hidden md:flex space-x-4">
+                <a href="#services" class="text-gray-700">Services</a>
+                <a href="#about" class="text-gray-700">À propos</a>
+                <a href="#contact" class="text-gray-700">Contact</a>
             </div>
+            <div class="md:hidden">
+                <button id="menu-btn" class="text-gray-700 focus:outline-none">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
+                    </svg>
+                </button>
+            </div>
+        </div>
+        <div id="menu" class="mobile-menu md:hidden">
+            <a href="#services" class="block px-4 py-2 text-gray-700">Services</a>
+            <a href="#about" class="block px-4 py-2 text-gray-700">À propos</a>
+            <a href="#contact" class="block px-4 py-2 text-gray-700">Contact</a>
         </div>
     </nav>
 
@@ -114,6 +136,11 @@
         </div>
     </footer>
 
+    <script>
+        document.getElementById('menu-btn').addEventListener('click', function() {
+            document.getElementById('menu').classList.toggle('active');
+        });
+    </script>
+
 </body>
 </html>
-
