--- a/index.html
+++ b/index.html
@@ -21,24 +21,29 @@
     <!-- Navbar -->
     <nav class="bg-white shadow">
         <div class="container mx-auto px-4 py-4 flex justify-between items-center">
-            <a href="#" class="text-xl font-bold text-blue-600">Cabinet d'Avocats</a>
+            <a href="#" class="text-xl font-bold text-blue-600" id="site-title">Cabinet d'Avocats</a>
             <div class="hidden md:flex space-x-4">
-                <a href="#services" class="text-gray-700">Services</a>
-                <a href="#about" class="text-gray-700">À propos</a>
-                <a href="#contact" class="text-gray-700">Contact</a>
+                <a href="#services" class="text-gray-700" id="nav-services">Services</a>
+                <a href="#about" class="text-gray-700" id="nav-about">À propos</a>
+                <a href="#contact" class="text-gray-700" id="nav-contact">Contact</a>
             </div>
-            <div class="md:hidden">
-                <button id="menu-btn" class="text-gray-700 focus:outline-none">
+            <div class="md:hidden flex items-center">
+                <button id="menu-btn" class="text-gray-700 focus:outline-none mr-4">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
                     </svg>
                 </button>
+                <select id="language-select" class="border border-gray-300 rounded-lg">
+                    <option value="fr">FR</option>
+                    <option value="ru">RU</option>
+                    <option value="uk">UK</option>
+                </select>
             </div>
         </div>
         <div id="menu" class="mobile-menu md:hidden">
-            <a href="#services" class="block px-4 py-2 text-gray-700">Services</a>
-            <a href="#about" class="block px-4 py-2 text-gray-700">À propos</a>
-            <a href="#contact" class="block px-4 py-2 text-gray-700">Contact</a>
+            <a href="#services" class="block px-4 py-2 text-gray-700" id="mobile-nav-services">Services</a>
+            <a href="#about" class="block px-4 py-2 text-gray-700" id="mobile-nav-about">À propos</a>
+            <a href="#contact" class="block px-4 py-2 text-gray-700" id="mobile-nav-contact">Contact</a>
         </div>
     </nav>
 
@@ -46,8 +51,8 @@
     <section class="bg-cover bg-center h-96" style="background-image: url('https://source.unsplash.com/featured/?law,lawyer');">
         <div class="container mx-auto h-full flex items-center justify-center">
             <div class="bg-white bg-opacity-75 p-8 rounded shadow-md text-center">
-                <h1 class="text-4xl font-bold mb-4">Bienvenue au Cabinet d'Avocats</h1>
-                <p class="text-xl">Nous offrons une large gamme de services juridiques pour répondre à vos besoins.</p>
+                <h1 class="text-4xl font-bold mb-4" id="hero-title">Bienvenue au Cabinet d'Avocats</h1>
+                <p class="text-xl" id="hero-text">Nous offrons une large gamme de services juridiques pour répondre à vos besoins.</p>
             </div>
         </div>
     </section>
@@ -55,37 +60,37 @@
     <!-- Services Section -->
     <section id="services" class="py-16">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold text-center mb-12">Nos Services</h2>
+            <h2 class="text-3xl font-bold text-center mb-12" id="services-title">Nos Services</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <img src="https://source.unsplash.com/featured/?consultation" alt="Consultation juridique" class="w-full h-48 object-cover rounded-t-lg">
-                    <h3 class="text-2xl font-bold mt-4">Consultation juridique</h3>
-                    <p class="mt-2">Des consultations juridiques personnalisées pour comprendre et défendre vos droits.</p>
+                    <h3 class="text-2xl font-bold mt-4" id="service1-title">Consultation juridique</h3>
+                    <p class="mt-2" id="service1-text">Des consultations juridiques personnalisées pour comprendre et défendre vos droits.</p>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <img src="https://source.unsplash.com/featured/?court" alt="Litiges et contentieux" class="w-full h-48 object-cover rounded-t-lg">
-                    <h3 class="text-2xl font-bold mt-4">Litiges et contentieux</h3>
-                    <p class="mt-2">Représentation devant les tribunaux pour résoudre vos litiges de manière efficace.</p>
+                    <h3 class="text-2xl font-bold mt-4" id="service2-title">Litiges et contentieux</h3>
+                    <p class="mt-2" id="service2-text">Représentation devant les tribunaux pour résoudre vos litiges de manière efficace.</p>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <img src="https://source.unsplash.com/featured/?contract" alt="Droit des contrats" class="w-full h-48 object-cover rounded-t-lg">
-                    <h3 class="text-2xl font-bold mt-4">Droit des contrats</h3>
-                    <p class="mt-2">Rédaction et révision de contrats pour protéger vos intérêts et prévenir les conflits.</p>
+                    <h3 class="text-2xl font-bold mt-4" id="service3-title">Droit des contrats</h3>
+                    <p class="mt-2" id="service3-text">Rédaction et révision de contrats pour protéger vos intérêts et prévenir les conflits.</p>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <img src="https://source.unsplash.com/featured/?family" alt="Droit de la famille" class="w-full h-48 object-cover rounded-t-lg">
-                    <h3 class="text-2xl font-bold mt-4">Droit de la famille</h3>
-                    <p class="mt-2">Conseils et représentation pour toutes les questions liées au droit de la famille.</p>
+                    <h3 class="text-2xl font-bold mt-4" id="service4-title">Droit de la famille</h3>
+                    <p class="mt-2" id="service4-text">Conseils et représentation pour toutes les questions liées au droit de la famille.</p>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <img src="https://source.unsplash.com/featured/?business" alt="Droit des affaires" class="w-full h-48 object-cover rounded-t-lg">
-                    <h3 class="text-2xl font-bold mt-4">Droit des affaires</h3>
-                    <p class="mt-2">Accompagnement juridique pour les entreprises et les entrepreneurs.</p>
+                    <h3 class="text-2xl font-bold mt-4" id="service5-title">Droit des affaires</h3>
+                    <p class="mt-2" id="service5-text">Accompagnement juridique pour les entreprises et les entrepreneurs.</p>
                 </div>
                 <div class="bg-white p-6 rounded-lg shadow-md">
                     <img src="https://source.unsplash.com/featured/?estate" alt="Droit immobilier" class="w-full h-48 object-cover rounded-t-lg">
-                    <h3 class="text-2xl font-bold mt-4">Droit immobilier</h3>
-                    <p class="mt-2">Assistance juridique dans les transactions et les litiges immobiliers.</p>
+                    <h3 class="text-2xl font-bold mt-4" id="service6-title">Droit immobilier</h3>
+                    <p class="mt-2" id="service6-text">Assistance juridique dans les transactions et les litiges immobiliers.</p>
                 </div>
             </div>
         </div>
@@ -94,12 +99,12 @@
     <!-- About Section -->
     <section id="about" class="bg-white py-16">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold text-center mb-12">À propos de nous</h2>
+            <h2 class="text-3xl font-bold text-center mb-12" id="about-title">À propos de nous</h2>
             <div class="flex flex-col md:flex-row items-center">
                 <img src="https://source.unsplash.com/featured/?team" alt="Notre équipe" class="w-full md:w-1/2 h-64 object-cover rounded-lg">
                 <div class="md:ml-8 mt-8 md:mt-0">
-                    <p class="text-lg">Le Cabinet d'Avocats est dédié à fournir des services juridiques de haute qualité. Notre équipe d'experts est composée d'avocats spécialisés dans divers domaines du droit. Nous nous engageons à défendre vos droits avec intégrité et professionnalisme.</p>
-                    <p class="mt-4 text-lg">Que vous ayez besoin de conseils juridiques, de représentation en justice ou d'accompagnement pour vos projets, nous sommes là pour vous aider à chaque étape.</p>
+                    <p class="text-lg" id="about-text1">Le Cabinet d'Avocats est dédié à fournir des services juridiques de haute qualité. Notre équipe d'experts est composée d'avocats spécialisés dans divers domaines du droit. Nous nous engageons à défendre vos droits avec intégrité et professionnalisme.</p>
+                    <p class="mt-4 text-lg" id="about-text2">Que vous ayez besoin de conseils juridiques, de représentation en justice ou d'accompagnement pour vos projets, nous sommes là pour vous aider à chaque étape.</p>
                 </div>
             </div>
         </div>
@@ -108,22 +113,22 @@
     <!-- Contact Section -->
     <section id="contact" class="py-16 bg-gray-100">
         <div class="container mx-auto px-4">
-            <h2 class="text-3xl font-bold text-center mb-12">Contactez-nous</h2>
+            <h2 class="text-3xl font-bold text-center mb-12" id="contact-title">Contactez-nous</h2>
             <div class="max-w-lg mx-auto bg-white p-8 rounded-lg shadow-md">
                 <form action="#" method="POST">
                     <div class="mb-4">
-                        <label for="name" class="block text-sm font-semibold">Nom</label>
+                        <label for="name" class="block text-sm font-semibold" id="contact-name-label">Nom</label>
                         <input type="text" id="name" name="name" class="w-full mt-2 p-2 border border-gray-300 rounded-lg" required>
                     </div>
                     <div class="mb-4">
-                        <label for="email" class="block text-sm font-semibold">Email</label>
+                        <label for="email" class="block text-sm font-semibold" id="contact-email-label">Email</label>
                         <input type="email" id="email" name="email" class="w-full mt-2 p-2 border border-gray-300 rounded-lg" required>
                     </div>
                     <div class="mb-4">
-                        <label for="message" class="block text-sm font-semibold">Message</label>
+                        <label for="message" class="block text-sm font-semibold" id="contact-message-label">Message</label>
                         <textarea id="message" name="message" rows="4" class="w-full mt-2 p-2 border border-gray-300 rounded-lg" required></textarea>
                     </div>
-                    <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded-lg">Envoyer</button>
+                    <button type="submit" class="w-full bg-blue-600 text-white py-2 rounded-lg" id="contact-button">Envoyer</button>
                 </form>
             </div>
         </div>
@@ -132,7 +137,7 @@
     <!-- Footer -->
     <footer class="bg-white py-6">
         <div class="container mx-auto text-center">
-            <p class="text-gray-700">&copy; 2024 Cabinet d'Avocats. Tous droits réservés.</p>
+            <p class="text-gray-700" id="footer-text">&copy; 2024 Cabinet d'Avocats. Tous droits réservés.</p>
         </div>
     </footer>
 
@@ -140,6 +145,115 @@
         document.getElementById('menu-btn').addEventListener('click', function() {
             document.getElementById('menu').classList.toggle('active');
         });
+
+        const translations = {
+            fr: {
+                "site-title": "Cabinet d'Avocats",
+                "nav-services": "Services",
+                "nav-about": "À propos",
+                "nav-contact": "Contact",
+                "hero-title": "Bienvenue au Cabinet d'Avocats",
+                "hero-text": "Nous offrons une large gamme de services juridiques pour répondre à vos besoins.",
+                "services-title": "Nos Services",
+                "service1-title": "Consultation juridique",
+                "service1-text": "Des consultations juridiques personnalisées pour comprendre et défendre vos droits.",
+                "service2-title": "Litiges et contentieux",
+                "service2-text": "Représentation devant les tribunaux pour résoudre vos litiges de manière efficace.",
+                "service3-title": "Droit des contrats",
+                "service3-text": "Rédaction et révision de contrats pour protéger vos intérêts et prévenir les conflits.",
+                "service4-title": "Droit de la famille",
+                "service4-text": "Conseils et représentation pour toutes les questions liées au droit de la famille.",
+                "service5-title": "Droit des affaires",
+                "service5-text": "Accompagnement juridique pour les entreprises et les entrepreneurs.",
+                "service6-title": "Droit immobilier",
+                "service6-text": "Assistance juridique dans les transactions et les litiges immobiliers.",
+                "about-title": "À propos de nous",
+                "about-text1": "Le Cabinet d'Avocats est dédié à fournir des services juridiques de haute qualité. Notre équipe d'experts est composée d'avocats spécialisés dans divers domaines du droit. Nous nous engageons à défendre vos droits avec intégrité et professionnalisme.",
+                "about-text2": "Que vous ayez besoin de conseils juridiques, de représentation en justice ou d'accompagnement pour vos projets, nous sommes là pour vous aider à chaque étape.",
+                "contact-title": "Contactez-nous",
+                "contact-name-label": "Nom",
+                "contact-email-label": "Email",
+                "contact-message-label": "Message",
+                "contact-button": "Envoyer",
+                "footer-text": "&copy; 2024 Cabinet d'Avocats. Tous droits réservés."
+            },
+            ru: {
+                "site-title": "Юридическая фирма",
+                "nav-services": "Услуги",
+                "nav-about": "О нас",
+                "nav-contact": "Контакт",
+                "hero-title": "Добро пожаловать в Юридическую фирму",
+                "hero-text": "Мы предлагаем широкий спектр юридических услуг для удовлетворения ваших потребностей.",
+                "services-title": "Наши Услуги",
+                "service1-title": "Юридическая консультация",
+                "service1-text": "Персонализированные юридические консультации для понимания и защиты ваших прав.",
+                "service2-title": "Судебные разбирательства",
+                "service2-text": "Представительство в суде для эффективного разрешения ваших споров.",
+                "service3-title": "Договорное право",
+                "service3-text": "Составление и пересмотр договоров для защиты ваших интересов и предотвращения конфликтов.",
+                "service4-title": "Семейное право",
+                "service4-text": "Консультации и представительство по всем вопросам, связанным с семейным правом.",
+                "service5-title": "Корпоративное право",
+                "service5-text": "Юридическая поддержка для компаний и предпринимателей.",
+                "service6-title": "Недвижимость",
+                "service6-text": "Юридическая помощь в сделках и спорах с недвижимостью.",
+                "about-title": "О нас",
+                "about-text1": "Юридическая фирма стремится предоставлять высококачественные юридические услуги. Наша команда экспертов состоит из адвокатов, специализирующихся в различных областях права. Мы стремимся защищать ваши права с честностью и профессионализмом.",
+                "about-text2": "Нуждаетесь ли вы в юридических консультациях, представительстве в суде или сопровождении ваших проектов, мы готовы помочь вам на каждом этапе.",
+                "contact-title": "Свяжитесь с нами",
+                "contact-name-label": "Имя",
+                "contact-email-label": "Эл. почта",
+                "contact-message-label": "Сообщение",
+                "contact-button": "Отправить",
+                "footer-text": "&copy; 2024 Юридическая фирма. Все права защищены."
+            },
+            uk: {
+                "site-title": "Юридична фірма",
+                "nav-services": "Послуги",
+                "nav-about": "Про нас",
+                "nav-contact": "Контакт",
+                "hero-title": "Ласкаво просимо до Юридичної фірми",
+                "hero-text": "Ми пропонуємо широкий спектр юридичних послуг для задоволення ваших потреб.",
+                "services-title": "Наші Послуги",
+                "service1-title": "Юридична консультація",
+                "service1-text": "Персоналізовані юридичні консультації для розуміння та захисту ваших прав.",
+                "service2-title": "Судові спори",
+                "service2-text": "Представництво в суді для ефективного вирішення ваших спорів.",
+                "service3-title": "Договірне право",
+                "service3-text": "Складання та перегляд договорів для захисту ваших інтересів і запобігання конфліктам.",
+                "service4-title": "Сімейне право",
+                "service4-text": "Консультації та представництво з усіх питань, пов'язаних із сімейним правом.",
+                "service5-title": "Корпоративне право",
+                "service5-text": "Юридична підтримка для компаній та підприємців.",
+                "service6-title": "Нерухомість",
+                "service6-text": "Юридична допомога в угодах та суперечках з нерухомістю.",
+                "about-title": "Про нас",
+                "about-text1": "Юридична фірма прагне надавати високоякісні юридичні послуги. Наша команда експертів складається з адвокатів, які спеціалізуються в різних галузях права. Ми прагнемо захищати ваші права чесно та професійно.",
+                "about-text2": "Потребуєте юридичних консультацій, представництва в суді чи супроводу ваших проектів? Ми готові допомогти вам на кожному етапі.",
+                "contact-title": "Зв'яжіться з нами",
+                "contact-name-label": "Ім'я",
+                "contact-email-label": "Ел. пошта",
+                "contact-message-label": "Повідомлення",
+                "contact-button": "Надіслати",
+                "footer-text": "&copy; 2024 Юридична фірма. Всі права захищені."
+            }
+        };
+
+        const languageSelect = document.getElementById('language-select');
+
+        languageSelect.addEventListener('change', function() {
+            const selectedLanguage = this.value;
+            applyTranslations(selectedLanguage);
+        });
+
+        function applyTranslations(lang) {
+            document.querySelectorAll("[id]").forEach(element => {
+                const translationKey = element.id;
+                if (translations[lang] && translations[lang][translationKey]) {
+                    element.textContent = translations[lang][translationKey];
+                }
+            });
+        }
     </script>
 
 </body>
