--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lexalaw</title>
+    <title>Lexalaw.eu</title>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css"
       rel="stylesheet"
@@ -32,7 +32,7 @@
             class="h-10 w-10 mr-2"
           />
           <a href="#" class="text-xl font-bold text-blue-950" id="site-title"
-            >LEXALAW</a
+            >LEXALAW.EU</a
           >
         </div>
         <div class="hidden md:flex space-x-4">
@@ -410,7 +410,7 @@
           'nav-contact': 'Контакт',
           'hero-title': 'Добро пожаловать в Lexalaw',
           'hero-text':
-            'Мы предлагаем широкий спектр юридических услуг для удовлетворения ваших потребностей.',
+            'Мы предлагаем широкий спектр юридических услуг для решения ваших вопросов.',
           'services-title': 'Наши Услуги',
           'service1-title': 'Юридическая консультация',
           'service1-text':
@@ -451,7 +451,7 @@
           'nav-contact': 'Контакт',
           'hero-title': 'Ласкаво просимо до Lexalaw',
           'hero-text':
-            'Ми пропонуємо широкий спектр юридичних послуг для задоволення ваших потреб.',
+            'Ми пропонуємо широкий спектр юридичних послуг для вирішення ваших питань.',
           'services-title': 'Наші Послуги',
           'service1-title': 'Юридична консультація',
           'service1-text':
