--- a/index.html
+++ b/index.html
@@ -218,10 +218,10 @@
           />
           <div class="md:ml-8 mt-8 md:mt-0">
             <p class="text-lg" id="about-text1">
-              Le Cabinet Lexalaw est dédié à fournir des services juridiques de
-              haute qualité. Notre équipe d'experts est composée d'avocats
-              spécialisés dans divers domaines du droit. Nous nous engageons à
-              défendre vos droits avec intégrité et professionnalisme.
+              Lexalaw est dédié à fournir des services juridiques de haute
+              qualité. Notre équipe d'experts est composée d'avocats spécialisés
+              dans divers domaines du droit. Nous nous engageons à défendre vos
+              droits avec intégrité et professionnalisme.
             </p>
             <p class="mt-4 text-lg" id="about-text2">
               Que vous ayez besoin de conseils juridiques, de représentation en
@@ -237,7 +237,7 @@
     <section id="contact" class="py-16 bg-gray-100">
       <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold text-center mb-12" id="contact-title">
-          Contactez-nous
+          Une question ? Une prise de rendez-vous ? <br />Contactez-nous
         </h2>
         <div class="max-w-lg mx-auto bg-white p-8 rounded-lg shadow-md">
           <form method="POST" id="contact-form">
@@ -277,6 +277,21 @@
                 type="email"
                 id="email"
                 name="email"
+                class="w-full mt-2 p-2 border border-gray-300 rounded-lg"
+                required
+              />
+            </div>
+            <div class="mb-4">
+              <label
+                for="phone"
+                class="block text-sm font-semibold"
+                id="contact-phone-label"
+                >Téléphone</label
+              >
+              <input
+                type="phone"
+                id="phone"
+                name="phone"
                 class="w-full mt-2 p-2 border border-gray-300 rounded-lg"
                 required
               />
@@ -391,12 +406,13 @@
             'Assistance juridique dans les transactions et les litiges immobiliers.',
           'about-title': 'À propos de nous',
           'about-text1':
-            "Le Cabinet Lexalaw est dédié à fournir des services juridiques de haute qualité. Notre équipe d'experts est composée d'avocats spécialisés dans divers domaines du droit. Nous nous engageons à défendre vos droits avec intégrité et professionnalisme.",
+            "Lexalaw est dédié à fournir des services juridiques de haute qualité. Notre équipe d'experts est composée d'avocats spécialisés dans divers domaines du droit. Nous nous engageons à défendre vos droits avec intégrité et professionnalisme.",
           'about-text2':
             "Que vous ayez besoin de conseils juridiques, de représentation en justice ou d'accompagnement pour vos projets, nous sommes là pour vous aider à chaque étape.",
           'contact-title': 'Contactez-nous',
           'contact-name-label': 'Nom',
           'contact-email-label': 'Email',
+          'contact-phone-label': 'Téléphone',
           'contact-service-label': 'Type de service',
           'contact-service-choose': 'Sélectionnez un service',
           'contact-message-label': 'Message',
@@ -435,9 +451,10 @@
             'Юридическая фирма стремится предоставлять высококачественные юридические услуги. Наша команда экспертов состоит из адвокатов, специализирующихся в различных областях права. Мы стремимся защищать ваши права с честностью и профессионализмом.',
           'about-text2':
             'Нуждаетесь ли вы в юридических консультациях, представительстве в суде или сопровождении ваших проектов, мы готовы помочь вам на каждом этапе.',
-          'contact-title': 'Свяжитесь с нами',
+          'contact-title': 'Есть вопрос? Нужна встреча? Свяжитесь с нами',
           'contact-name-label': 'Имя',
           'contact-email-label': 'Эл. почта',
+          'contact-phone-label': 'Телефон',
           'contact-service-label': 'Тип услуги',
           'contact-service-choose': 'Выберите услугу',
           'contact-message-label': 'Сообщение',
@@ -475,9 +492,10 @@
             'Юридична фірма прагне надавати високоякісні юридичні послуги. Наша команда експертів складається з адвокатів, які спеціалізуються в різних галузях права. Ми прагнемо захищати ваші права чесно та професійно.',
           'about-text2':
             'Потребуєте юридичних консультацій, представництва в суді чи супроводу ваших проектів? Ми готові допомогти вам на кожному етапі.',
-          'contact-title': "Зв'яжіться з нами",
+          'contact-title': "Є питання? Потрібна зустріч? Зв'яжіться з нами",
           'contact-name-label': "Ім'я",
           'contact-email-label': 'Ел. пошта',
+          'contact-phone-label': 'Телефон',
           'contact-service-label': 'Тип послуги',
           'contact-service-choose': 'Виберіть послугу',
           'contact-message-label': 'Повідомлення',
