remove useless image

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lexalaw.eu</title>
+    <meta name="description" content="Services juridiques de haute qualité" />
+    <meta
+      name="keywords"
+      content="services juridiques, avocat, conseils, litiges, contentieux, droit de la famille, droit des affaires, droit immobilier, contrats"
+    />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css"
       rel="stylesheet"
