Add english language

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <a href="#services" class="text-gray-700" id="nav-services"
             >Services</a
           >
-          <a href="#about" class="text-gray-700" id="nav-about">À propos</a>
+          <a href="#about" class="text-gray-700" id="nav-about">About</a>
           <a href="#contact" class="text-gray-700" id="nav-contact">Contact</a>
         </div>
         <div class="md:hidden flex items-center">
@@ -72,6 +72,7 @@
             id="language-select"
             class="border border-gray-300 rounded-lg"
           >
+            <option value="en">ENG</option>
             <option value="fr">FRA</option>
             <option value="ru">RUS</option>
             <option value="uk">UKR</option>
@@ -89,7 +90,7 @@
           href="#about"
           class="block px-4 py-2 text-gray-700"
           id="mobile-nav-about"
-          >À propos</a
+          >About</a
         >
         <a
           href="#contact"
@@ -108,11 +109,10 @@
       <div class="container mx-auto h-full flex items-center justify-center">
         <div class="bg-white bg-opacity-75 p-8 rounded shadow-md text-center">
           <h1 class="text-4xl font-bold mb-4" id="hero-title">
-            Bienvenue chez Lexalaw
+            Welcome to Lexalaw
           </h1>
           <p class="text-xl" id="hero-text">
-            Nous offrons une large gamme de services juridiques pour répondre à
-            vos besoins.
+            We offer a wide range of legal services to meet your needs.
           </p>
         </div>
       </div>
@@ -122,77 +122,74 @@
     <section id="services" class="py-16">
       <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold text-center mb-12" id="services-title">
-          Nos Services
+          Our Services
         </h2>
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
           <div class="bg-white p-6 rounded-lg shadow-md">
             <img
               src="images/business-meeting.jpg"
-              alt="Consultation juridique"
+              alt="Legal Consultation"
               class="w-full h-48 object-cover rounded-t-lg"
             />
             <h3 class="text-2xl font-bold mt-4" id="service1-title">
-              Consultation juridique
+              Legal Consultation
             </h3>
             <p class="mt-2" id="service1-text">
-              Des consultations juridiques personnalisées pour comprendre et
-              défendre vos droits.
+              Personalized legal consultations to understand and defend your
+              rights.
             </p>
           </div>
           <div class="bg-white p-6 rounded-lg shadow-md">
             <img
               src="images/dispute-resolution.jpg"
-              alt="Litiges et contentieux"
+              alt="Litigation and Dispute Resolution"
               class="w-full h-48 object-cover rounded-t-lg"
             />
             <h3 class="text-2xl font-bold mt-4" id="service2-title">
-              Litiges et contentieux
+              Litigation and Dispute Resolution
             </h3>
             <p class="mt-2" id="service2-text">
-              Représentation devant les tribunaux pour résoudre vos litiges de
-              manière efficace.
+              Representation in court to effectively resolve your disputes.
             </p>
           </div>
           <div class="bg-white p-6 rounded-lg shadow-md">
             <img
               src="images/contract-law.jpg"
-              alt="Droit des contrats"
+              alt="Contract Law"
               class="w-full h-48 object-cover rounded-t-lg"
             />
             <h3 class="text-2xl font-bold mt-4" id="service3-title">
-              Droit des contrats
+              Contract Law
             </h3>
             <p class="mt-2" id="service3-text">
-              Rédaction et révision de contrats pour protéger vos intérêts et
-              prévenir les conflits.
+              Drafting and reviewing contracts to protect your interests and
+              prevent conflicts.
             </p>
           </div>
           <div class="bg-white p-6 rounded-lg shadow-md">
             <img
               src="images/family-law.jpg"
-              alt="Droit de la famille"
+              alt="Family Law"
               class="w-full h-48 object-cover rounded-t-lg"
             />
             <h3 class="text-2xl font-bold mt-4" id="service4-title">
-              Droit de la famille
+              Family Law
             </h3>
             <p class="mt-2" id="service4-text">
-              Conseils et représentation pour toutes les questions liées au
-              droit de la famille.
+              Advice and representation for all family law-related matters.
             </p>
           </div>
           <div class="bg-white p-6 rounded-lg shadow-md">
             <img
               src="images/business-law.jpg"
-              alt="Droit des affaires"
+              alt="Business Law"
               class="w-full h-48 object-cover rounded-t-lg"
             />
             <h3 class="text-2xl font-bold mt-4" id="service5-title">
-              Droit des affaires
+              Business Law
             </h3>
             <p class="mt-2" id="service5-text">
-              Accompagnement juridique pour les entreprises et les
-              entrepreneurs.
+              Legal support for businesses and entrepreneurs.
             </p>
           </div>
           <div class="bg-white p-6 rounded-lg shadow-md">
@@ -202,11 +199,10 @@
               class="w-full h-48 object-cover rounded-t-lg"
             />
             <h3 class="text-2xl font-bold mt-4" id="service6-title">
-              Droit immobilier
+              Real Estate Law
             </h3>
             <p class="mt-2" id="service6-text">
-              Assistance juridique dans les transactions et les litiges
-              immobiliers.
+              Legal assistance in real estate transactions and disputes.
             </p>
           </div>
         </div>
@@ -217,25 +213,24 @@
     <section id="about" class="bg-white py-16">
       <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold text-center mb-12" id="about-title">
-          À propos de nous
+          About us
         </h2>
         <div class="flex flex-col md:flex-row items-center">
           <img
             src="images/lexalaw-team.jpg"
-            alt="Notre équipe"
+            alt="Our team"
             class="w-full md:w-1/2 h-64 object-cover rounded-lg"
           />
           <div class="md:ml-8 mt-8 md:mt-0">
             <p class="text-lg" id="about-text1">
-              Lexalaw est dédié à fournir des services juridiques de haute
-              qualité. Notre équipe d'experts est composée d'avocats spécialisés
-              dans divers domaines du droit. Nous nous engageons à défendre vos
-              droits avec intégrité et professionnalisme.
+              Lexalaw is dedicated to providing high-quality legal services. Our
+              team of experts consists of lawyers specializing in various areas
+              of law. We are committed to defending your rights with integrity
+              and professionalism.
             </p>
             <p class="mt-4 text-lg" id="about-text2">
-              Que vous ayez besoin de conseils juridiques, de représentation en
-              justice ou d'accompagnement pour vos projets, nous sommes là pour
-              vous aider à chaque étape.
+              Whether you need legal advice, court representation, or support
+              for your projects, we are here to help you every step of the way.
             </p>
           </div>
         </div>
@@ -246,7 +241,7 @@
     <section id="contact" class="py-16 bg-gray-100">
       <div class="container mx-auto px-4">
         <h2 class="text-3xl font-bold text-center mb-12" id="contact-title">
-          Une question ? Une prise de rendez-vous ? <br />Contactez-nous
+          A question? Need appointment? <br />Contact us
         </h2>
         <div class="max-w-lg mx-auto bg-white p-8 rounded-lg shadow-md">
           <form method="POST" id="contact-form">
@@ -265,7 +260,7 @@
                 for="name"
                 class="block text-sm font-semibold"
                 id="contact-name-label"
-                >Nom</label
+                >Name</label
               >
               <input
                 type="text"
@@ -295,7 +290,7 @@
                 for="phone"
                 class="block text-sm font-semibold"
                 id="contact-phone-label"
-                >Téléphone</label
+                >Phone</label
               >
               <input
                 type="phone"
@@ -310,7 +305,7 @@
                 for="service"
                 class="block text-sm font-semibold"
                 id="contact-service-label"
-                >Type de service</label
+                >Type of service</label
               >
               <select
                 id="service"
@@ -319,25 +314,25 @@
                 required
               >
                 <option value="" disabled selected id="contact-service-choose">
-                  Sélectionnez un service
+                  Select a service
                 </option>
-                <option value="consultation-juridique" id="service1-title">
-                  Consultation juridique
+                <option value="legal-consultation" id="service1-title">
+                  Legal consultation
                 </option>
-                <option value="litiges-contentieux" id="service2-title">
-                  Litiges et contentieux
+                <option value="dispute-resolution" id="service2-title">
+                  Litigation and dispute resolution
                 </option>
-                <option value="droit-des-contrats" id="service3-title">
-                  Droit des contrats
+                <option value="contract-law" id="service3-title">
+                  Contract law
                 </option>
-                <option value="droit-de-la-famille" id="service4-title">
-                  Droit de la famille
+                <option value="family-law" id="service4-title">
+                  Family law
                 </option>
-                <option value="droit-des-affaires" id="service5-title">
-                  Droit des affaires
+                <option value="business-law" id="service5-title">
+                  Business law
                 </option>
-                <option value="droit-immobilier" id="service6-title">
-                  Droit immobilier
+                <option value="real-estate-law" id="service6-title">
+                  Real estate law
                 </option>
               </select>
             </div>
@@ -361,7 +356,7 @@
               class="w-full bg-blue-600 text-white py-2 rounded-lg"
               id="contact-button"
             >
-              Envoyer
+              Send
             </button>
             <div class="mb-4" id="form-result"></div>
           </form>
@@ -373,7 +368,7 @@
     <footer class="bg-white py-6">
       <div class="container mx-auto text-center">
         <p class="text-gray-700" id="footer-text">
-          &copy; 2024 Lexalaw. Tous droits réservés.
+          &copy; 2024 Lexalaw. All rights reserved
         </p>
       </div>
     </footer>
